--- a/web/index.html
+++ b/web/index.html
@@ -6,7 +6,7 @@
         <!-- Set the viewport to prepare for mobile -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="stylesheet" type="text/css" href="packages/mtproj/style.css">
     </head>
     <body><div id="body"></div></body>
 
