make sweet framework with dynamic body width

--- a/example/index.html
+++ b/example/index.html
@@ -5,6 +5,9 @@
             <li>
                 <a href="window_framework">Window Framework</a>
             </li>
+            <li>
+                <a href="file_tree">File Tree</a>
+            </li>
         </ul>
     </body>
 </html>
